2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs: Refactored status bar.

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/POEditorWidget.cs: Untranslated <--> translated
	  update now works in entry list.

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/CatalogParser.cs: Fixed plural message bug.

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/POEditorWidget.cs: Columns are now resizeable.

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs: Improved ui: original
	  strings are now selectable.Fixed ui glitch: original string in the
	  entrylist is now in gettext format too.

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  MonoDevelop.Gettext/StringEscaping.cs,
	  MonoDevelop.Gettext/PluralForms.cs: Now using the gettext format for
	  text input instead of the plain text (otherwise the translation of some
	  strings is impossible and I assume that the translators are used to the
	  \n, \r, \t escape sequences).

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/CatalogEditorView.cs,
	  MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  MonoDevelop.Gettext.Editor/CatalogHeadersWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  MonoDevelop.Gettext/CatalogParser.cs,
	  MonoDevelop.Gettext/CatalogEntry.cs,
	  MonoDevelop.Gettext/CatalogHeaders.cs, MonoDevelop.Gettext/Catalog.cs:
	  Refactored gettext addin, fixed bug in headers widget.

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/GettextEditorDisplayBinding.cs,
	  MonoDevelop.Gettext.Editor/CatalogEditorView.cs,
	  MonoDevelop.Gettext.Editor/CatalogEditor.cs,