@@ -1,5 +1,9 @@
 2008-02-27  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Gettext.Editor/POEditorWidget.cs: filter updates more nicely.
+
+2008-02-27  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Gettext.Editor/POEditorWidget.cs,
 	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs: Refactored status bar.
 
